# rg35xxp-pancakes

./: .gitattributes  .gitignore  Dockerfile  GEMINI.md  LICENSE  README-zh.md  README.md  make-squashfs.ts  pack-one.ts  package-lock.json  package.json  toolchain.ts
package/: RetroArch.ts  adb.ts  all.ts  alsa-utils.ts  alsa.ts  avahi.ts  bash.ts  bison.ts  boost.ts  btrfs-progs.ts  busybox.ts  bzip2.ts  cairo.ts  cjson.ts  connman.ts  curl.ts  dbus.ts  dropbear.ts  e2fsprogs.ts  eudev.ts  evtest.ts  expat.ts  ffmpeg.ts  file.ts  flex.ts  fontconfig.ts  freetype2.ts  fribidi.ts  (+84 more)
resource/apps/rg35xxp-iced/: Cargo.toml  README.md  build.rs
resource/apps/rg35xxp-iced/apps/PPSSPP/: info.toml
resource/apps/rg35xxp-iced/apps/RetroArch/: info.toml
resource/apps/rg35xxp-iced/assets/material-design-icons/: README.md
resource/apps/rg35xxp-iced/assets/stereo/: README.md
resource/apps/rg35xxp-iced/src/: main.rs
resource/apps/rg35xxp-iced/src/emulate/: mod.rs
resource/apps/rg35xxp-iced/src/launcher/: backend.rs  config.rs  executor.rs  fonts.rs  launcher.rs  mod.rs  pad.rs  page.rs
resource/apps/rg35xxp-iced/src/launcher/page/: file_manager.rs  game.rs  settings.rs  software.rs  wifi.rs
resource/apps/rg35xxp-iced/src/launcher/ui/: alert.rs  dialog.rs  form.rs  icon.rs  keyboard.rs  list.rs  menu.rs  mod.rs  multi_line_view.rs  toolkit.rs
resource/apps/rg35xxp-iced/src/rg35xxp/: backlight.rs  blit.glsl  ctrl.rs  egl.rs  input.rs  mod.rs  render.rs  runner.rs
resource/apps/rg35xxp-init/: Cargo.toml  init.toml
resource/apps/rg35xxp-init/src/: buffer.rs  cli.rs  ctrl.rs  daemon.rs  logo.rs  main.rs
(+66 files in other folders)
