[package]
name = "rg35xxp-launcher"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = 'abort'

[dependencies]
iced_core = "0.14.0"
iced_runtime = "0.14.0"
iced_wgpu = "0.14.0"
iced_widget = { version = "0.14.2", features = ["image","svg"] }
iced_renderer = { version = "0.14.0", features = ["wgpu-bare"] }
iced_graphics = { version = "0.14.0", features = ["fira-sans"] }
image = "0.25.9"
anyhow = "1.0.100"
log = "0.4.29"
env_logger = "0.11.9"
evdev = {version = "0.13.2",features = ["tokio"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
iced = { version = "0.14.0", features = ["advanced"] }
toml = { version = "1.0.1+spec-1.1.0" }
tokio = { version = "1.49.0", features = ["full"] }
libc = "0.2.178"
arc-swap = "1.8.2"
chrono = "0.4.44"
rodio = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }

[features]
default = []
rg35xxp = []
material-design-icons = []
