[package]
name = "y-init"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = 'abort'

[dependencies]
toml = "1.0.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.91"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.31.1", features = ["mount", "signal", "process", "term", "mman"] }
libc = "0.2.161"
tokio-util = { version = "0.7.18", features = ["full"] }
clap = { version = "4.5.60", features = ["derive"] }
image = "0.25.9"

[features]
file_logger = []
